--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                   <input type="color" id="background" value="#ffffff">
                   <p>Background Color</p>
                 </div>
+                <button class="lines">Toggle Lines</button>
                 <div>
                   <p>Adjust the size of the grid:</p>
                   <input type="number" value="30" id="size">
